--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Database
 DATABASE_URL=postgres://localhost/pgp_auth_app
 
-# Session Security (change this!)
-SESSION_SECRET=your_very_long_secret_key_at_least_64_characters_for_security
+# Session Security (REQUIRED - generate with: openssl rand -hex 64)
+SESSION_SECRET=
 
 # Environment
 RACK_ENV=development
