--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,24 @@
 # Database
 DATABASE_URL=postgres://localhost/pgp_auth_app
 
-# Session Security (REQUIRED - generate with: openssl rand -hex 64)
+# SECURITY HARDENED: Session Security (REQUIRED - generate with: openssl rand -hex 64)
 SESSION_SECRET=
 
-# Environment
+# SECURITY HARDENED: Additional security salts (generate each with: openssl rand -hex 64)
+CHALLENGE_SALT=
+SESSION_SALT=
+RATE_LIMIT_SALT=
+
+# SECURITY HARDENED: Production configuration
 RACK_ENV=development
+TRUSTED_PROXY_IP=
+SESSION_DOMAIN=
+
+# SECURITY HARDENED: Security settings
+AUDIT_LOG_RETENTION_DAYS=30
+RATE_LIMIT_RETENTION_HOURS=24
+SESSION_TIMEOUT_HOURS=1
+
+# SECURITY HARDENED: Monitoring
+SECURITY_MONITORING_ENABLED=true
+FAILED_LOGIN_NOTIFICATION_THRESHOLD=5
